# llm-from-scratch

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: attention.ipynb  prepare_text.ipynb
src/: test_tokenizers.py
src/ScratchedModules/: dataset.py  model.py  tokenizer.py
test/: test_model.py  test_tokenizers.py
